[project]
name = "freenodeseeker"
version = "0.1.0"
description = "Auto-collect free V2Ray/Clash subscription nodes with built-in HTTP server"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "FreeNodeSeeker"}]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.9",
    "pproxy>=2.7",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
    "orjson>=3.9",
    "yarl>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
fns = "fns.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
